# airflow_workbook

./: .gitignore  README.md  pyproject.toml
dags/: simple.py
dags/nested_dags/: python_operator.py  task_decorator.py
